--- a/_posts/2017-1-1-sample3.md
+++ b/_posts/2017-1-1-sample3.md
@@ -10,7 +10,7 @@ footer: true
 maximize: true
 encrypted_text: true
 toc_level: 4
-category: Sample
+category: NeGYa
 date: 2019-5-25
 excerpt: "This is excerpt."
 abstract: "This is abstract. Abstract is blank by default."
