Jenkins提示反向代理设置有误错误

--- a/_posts/Server/2020-02-07-dns-nginx.md
+++ b/_posts/Server/2020-02-07-dns-nginx.md
@@ -77,3 +77,28 @@ abstract: ""
 		sudo nginx -s reload
 
 6. 重新访问设置的域名
+
+## 后续出现的问题
+1. Jeknins由于设置了Nginx, 导致出现反向代理设置有误错误
+ 修改配置
+ 
+ ```
+ server {
+    listen 80;
+    server_name jenkins.lasong.com.cn;
+    location / {
+        proxy_pass http://127.0.0.1:8001;
+        proxy_http_version  1.1;
+        proxy_cache_bypass  $http_upgrade;
+
+        proxy_set_header Upgrade           $http_upgrade;
+        proxy_set_header Connection        "upgrade";
+        proxy_set_header Host              $host;
+        proxy_set_header X-Real-IP         $remote_addr;
+        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host  $host;
+        proxy_set_header X-Forwarded-Port  $server_port;
+    }
+}
+ ```
