--- a/_posts/Mac/2020-02-13-terminal.md
+++ b/_posts/Mac/2020-02-13-terminal.md
@@ -2,7 +2,7 @@
 title: 00:终端Terminal便捷操作
 author: Zhusong
 layout: post
-category: Server
+category: 高效编程
 home_btn: true
 btn_text: true
 footer: true
