--- a/_posts/Android/2020-02-03-android-p2.md
+++ b/_posts/Android/2020-02-03-android-p2.md
@@ -2,6 +2,8 @@
 title: 00:Android基础-Activity-P2
 author: Zhusong
 layout: post
+footer: true
+post_list: "category"
 category: Android
 date: 2020-2-3
 excerpt: "00:Android基础-Activity-P2"
