--- a/_posts/Mac/2020-02-13-terminal.md
+++ b/_posts/Mac/2020-02-13-terminal.md
@@ -2,6 +2,8 @@
 title: 00:终端Terminal便捷操作
 author: Zhusong
 layout: post
+footer: true
+post_list: "category"
 category: 高效编程
 home_btn: true
 btn_text: true
