--- a/_posts/Server/2020-02-07-dns-nginx.md
+++ b/_posts/Server/2020-02-07-dns-nginx.md
@@ -2,6 +2,7 @@
 title: 00:Nginx-解决单个阿里云服务器多域名非80端口
 author: Zhusong
 layout: post
+post_list: "category"
 category: Server
 home_btn: true
 btn_text: true
