去除绝对路径 使用相对路径

--- a/_posts/NeGYa/2017-1-1-sample3.md
+++ b/_posts/NeGYa/2017-1-1-sample3.md
@@ -71,7 +71,7 @@ $$
 | surprise | maza faka | surprise surprise surprise maza faka maza faka maza faka kakakakak |
 
 ### image
-![img-smpl]({{site.url}}{{site.baseurl}}{{site.assets_path}}/img/img-sample.jpg)
+![img-smpl]({{site.assets_path}}/img/img-sample.jpg)
 
 ### heading
 #### This is heading 4
