--- a/_posts/Mac/2020-02-13-terminal.md
+++ b/_posts/Mac/2020-02-13-terminal.md
@@ -28,3 +28,30 @@ Ctrl+k: 删除光标至命令行尾的内容
 unzip xxx.zip
 unzip xxx.zip -d 文件夹名称
 ```
+
+# Vim快捷操作
+## [查找与替换](https://harttle.land/2016/08/08/vim-search-in-file.html)
+
+	:s（substitute）命令用来查找和替换字符串。语法如下：
+
+	:{作用范围}s/{目标}/{替换}/{替换标志}
+	
+	例如:%s/foo/bar/g会在全局范围(%)查找foo并替换为bar，所有出现都会被替换（g）。
+
+	作用范围
+	作用范围分为当前行、全文、选区等等。
+
+	当前行：
+	:s/foo/bar/g
+	
+	全文：
+	:%s/foo/bar/g
+	
+	选区，在Visual模式下选择区域后输入:，Vim即可自动补全为 :'<,'>。
+	:'<,'>s/foo/bar/g
+	
+	2-11行：
+	:2,11s/foo/bar/g
+	
+	当前行.与接下来两行+2：
+	:.,+2s/foo/bar/g
