--- a/_posts/Server/2020-02-07-dns-nginx.md
+++ b/_posts/Server/2020-02-07-dns-nginx.md
@@ -31,7 +31,7 @@ abstract: ""
 	
 >因为阿里云的云解析DNS也有个功能是隐性URL, 通过指定端口号可以间接达到访问但是不显示端口号，但是在点击链接跳转到另外一个页面还是会改变浏览器的域名显示
 
-> <img src="{{site.url}}{{site.baseurl}}{{site.assets_path}}/img/server/img-nginx-url.jpeg" width="80%">
+> <img src="{{site.assets_path}}/img/server/img-nginx-url.jpeg" width="80%">
 
 ## 三：解决方案
 
@@ -51,12 +51,12 @@ abstract: ""
 
 2. 阿里云=>云解析DNS=>解析设置=>添加记录
 
-	> <img src="{{site.url}}{{site.baseurl}}{{site.assets_path}}/img/server/img-nginx-dns-add.png" width="80%">
+	> <img src="{{site.assets_path}}/img/server/img-nginx-dns-add.png" width="80%">
 
 
 3. 完成这2步之后，访问设置的域名，在不设置的情况下，浏览器访问该地址，显示的是下面这个
 		
-	> <img src="{{site.url}}{{site.baseurl}}{{site.assets_path}}/img/server/img-nginx-index.png" width="80%">
+	> <img src="{{site.assets_path}}/img/server/img-nginx-index.png" width="80%">
 	
 4. 切换到/etc/nginx/conf.d目录,新建文件XXX.conf,加入如下代码
 
