--- a/_posts/Server/2020-02-07-dns-nginx.md
+++ b/_posts/Server/2020-02-07-dns-nginx.md
@@ -103,3 +103,5 @@ abstract: ""
     }
 }
  ```
+
+2. 不知道为什么, 我在杭州的移动网络访问不了Coding.net的Pages, 然后想在自己的阿里云服务器上部署, 国内访问我的阿里云服务器, 在安装Jekyll之后, 调试后发现, Jekyll自己生成的页面引用资源是相对路径, 而我使用的开源项目使用的是绝对路径, 修改之后发现, 所有地方代码一样, 可以通用, 果断改之, 然后还是使用Gitee Pages, 默认是Gitee, 其他DNS修改成需要的网址, 反正哪个好用用哪个
