--- a/_posts/Mac/2020-02-13-terminal.md
+++ b/_posts/Mac/2020-02-13-terminal.md
@@ -55,3 +55,9 @@ unzip xxx.zip -d 文件夹名称
 	
 	当前行.与接下来两行+2：
 	:.,+2s/foo/bar/g
+	
+# 无日志后台执行
+nohup ./运行的程序 >/dev/null 2>&1 &	
+
+# 查找进程
+ps -aux | grep 关键字
