--- a/_posts/2020-02-19-TODO.md
+++ b/_posts/2020-02-19-TODO.md
@@ -12,4 +12,6 @@ abstract: ""
 ---
 
 ## Web
-1. 页面修改为相对路径导致站点地图生成的地址不包含域名的问题
+1. 页面修改为相对路径导致站点地图生成的地址不包含域名的问题  
+	
+	> 在_config.yml配置url, 在网页内不使用该属性即可
