--- a/_posts/Mac/2020-02-20-question.md
+++ b/_posts/Mac/2020-02-20-question.md
@@ -32,7 +32,7 @@ abstract: ""
 <https://blog.csdn.net/zzusimon/article/details/57080337>
 
 
-# Jenkins 执行Shell命令终端
+# Jenkins执行Shell失败并停止
 
 ## Q:
 Jenkins执行Shell命令标记为Failure, 命令行执行到某一行就停止
@@ -51,3 +51,17 @@ command || true
  ```
 <https://blog.csdn.net/qq_32706349/article/details/87926715>
 <https://cloud.tencent.com/developer/ask/115620>
+
+# Jenins 执行完Shell之后杀掉衍生进程
+
+## Q:
+Jenkins在执行完shll之后会杀死衍生进程
+
+## A:
+最简单的, 在shell加入  
+
+```
+BUILD_ID=donKillMe
+```
+
+<https://blog.csdn.net/qq_41154871/article/details/89714457>
