--- a/_posts/Mac/2020-03-03-tools.md
+++ b/_posts/Mac/2020-03-03-tools.md
@@ -28,12 +28,13 @@ macOS（或 Linux）缺失的软件包的管理器
 	https://raw.githubusercontent.com/Homebrew/install/master/install.sh
 	```
 * 添加运行权限  
-	```chmod +x install.sh```  
-
-* 运行脚本
-
-	```./install.sh```  
-
+	```
+	chmod +x install.sh
+	```  
+* 运行脚本  
+	```
+	./install.sh
+	```  
 * 关闭终端,重新打开
 * 安装软件brew intall autojump
 
