--- a/_posts/Mac/2020-02-13-terminal.md
+++ b/_posts/Mac/2020-02-13-terminal.md
@@ -68,3 +68,13 @@ ps -aux | grep 关键字
 
 # 查找并杀掉进程
 ps -aux | grep 关键字 | awk '{print $2}' | xargs kill
+
+
+# 终端代理
+在不开启代理的情况下, 使用Shadowsocks在终端仍然是无法访问外网的,需要设置代理
+
+```shell
+alias proxy='export all_proxy=socks5://127.0.0.1:1080'
+alias unproxy='unset all_proxy'
+alias ipinfo='curl myip.ipip.net'
+```
