--- a/_posts/Mac/2020-03-03-tools.md
+++ b/_posts/Mac/2020-03-03-tools.md
@@ -19,20 +19,24 @@ macOS（或 Linux）缺失的软件包的管理器
 
 步骤  
 
-* 进入Homebrew链接,第一个就是教你怎么安装   
-	```
+* 进入Homebrew链接,第一个就是教你怎么安装  
+ 
+	```shell
 	/bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install.sh)"
 	```
 * 但是我在没有设置代理的终端一直报443错误，所以直接浏览器访问并拷贝保存本地install.sh
+
 	```
 	https://raw.githubusercontent.com/Homebrew/install/master/install.sh
 	```
 * 添加运行权限  
-	```
+
+	```shell
 	chmod +x install.sh
 	```  
 * 运行脚本  
-	```
+
+	```shell
 	./install.sh
 	```  
 * 关闭终端,重新打开
@@ -48,7 +52,8 @@ macOS（或 Linux）缺失的软件包的管理器
 * 切换到autojump文件夹，运行./install.py
 * 结束后会提醒你加入命令到配置.profile, 这个是系统的, 当前用户是.bash_profile
 * 使用brew安装autojump  
-	```
+
+	```shell
 	brew install autojump
 	```
 * 关闭终端, 重新打开终端, 使用j 关键字就可以跳转了
