--- a/_posts/Server/2020-03-03-jekyll.md
+++ b/_posts/Server/2020-03-03-jekyll.md
@@ -10,9 +10,32 @@ footer: true
 maximize: true
 date: 2020-2-14
 excerpt: "05:Jekyll安装本地调试"
-abstract: "便于论坛页面的调整"
+abstract: "便于论坛页面的本地调整"
 ---
-sudo gem install jekyll
 
-jekyll-sass-converter requires Ruby version >= 2.4.0.
+# 安装rvm
+1. 下载并执行命令，这里需要给终端设置代理, 参照[00:终端Terminal便捷操作](</terminal>)内的终端代理部分
+	
+	```shell
+	curl -sSL https://get.rvm.io | bash -s stable
+	```
+	
+2. 查看可安装的版本，在最上面
+
+	```shell
+	rvm list known
+	```
+	
+3. 安装可安装的版本,如果出现错误,可以先尝试降低版本, 可能是新版本跟旧系统不兼容
+
+	```shell
+	rvm install 2.6.0
+	```
+
+4. 设置默认版本  
+
+	```shell
+	rvm use 2.6.0 --default
+	```	
+
  
