--- a/_posts/Server/2020-03-03-jekyll.md
+++ b/_posts/Server/2020-03-03-jekyll.md
@@ -14,28 +14,37 @@ abstract: "便于论坛页面的本地调整"
 ---
 
 # 安装rvm
-1. 下载并执行命令，这里需要给终端设置代理, 参照[00:终端Terminal便捷操作](</terminal>)内的终端代理部分
+RVM 是 Ruby 的版本管理器
+
+1. 下载脚本并运行, 放心是官方脚本, 调整脚本适合mac用户直接运行 [__点击下载__]({{site.assets_path}}/file/rvm_install.sh)  
+	> 出现gpg：command not found错误，  
+	>> 应该用homebrew重新安装一下，命令brew install gnupg gnupg2  
+	>
+	> 出现curl: (35) LibreSSL SSL\_connect: SSL\_ERROR\_SYSCALL in connection to raw.githubusercontent.com:443  
+	>> 终端还是国内, 无法访问, 给终端设置代理, 参照[00:终端Terminal便捷操作](</terminal>)内的终端代理部分  
+	
+2. 安装jekyll & bundler
 	
 	```shell
-	curl -sSL https://get.rvm.io | bash -s stable
+	gem install jekyll bundler
+	jekyll -v # 查看jekyll版本
+	bundle -v # 查看bundle版本
 	```
 	
-2. 查看可安装的版本，在最上面
+3. 安装插件
 
 	```shell
-	rvm list known
+	gem install jekyll-sitemap
+	gem install jekyll-paginate
+	gem install jekyll-feed
 	```
-	
-3. 安装可安装的版本,如果出现错误,可以先尝试降低版本, 可能是新版本跟旧系统不兼容
+4. 运行jekyll, 想要后台运行参考参照[00:终端Terminal便捷操作](</terminal>)内的后台运行部分
 
 	```shell
-	rvm install 2.6.0
+	jekyll server
 	```
-
-4. 设置默认版本  
+5. 后台运行jekyll服务后, 可以调用build更新静态网页
 
 	```shell
-	rvm use 2.6.0 --default
-	```	
-
- 
+	jekyll build
+	```
