--- a/_posts/Mac/2020-03-03-tools.md
+++ b/_posts/Mac/2020-03-03-tools.md
@@ -58,3 +58,8 @@ macOS（或 Linux）缺失的软件包的管理器
 	```
 * 关闭终端, 重新打开终端, 使用j 关键字就可以跳转了
 * tips: 如果想要多个目录切换, 可以输入关键字后不按回车, 按tab可以选择
+
+# [Fork](https://git-fork.com/)
+
+一款mac下轻量级的git可视化工具
+
