--- a/_posts/Mac/2020-02-13-terminal.md
+++ b/_posts/Mac/2020-02-13-terminal.md
@@ -15,7 +15,7 @@ abstract: ""
 
 
 # 终端光标跳转
-```
+```shell
 Ctrl+a: 跳到命令行首
 Ctrl+e: 跳到命令行尾
 Ctrl+u: 删除光标至命令行首的内容
@@ -29,54 +29,78 @@ unzip xxx.zip -d 文件夹名称
 ```
 
 # Vim快捷操作
+
+所有操作前提都是ESC进入命令行模式
+
 ## [查找与替换](https://harttle.land/2016/08/08/vim-search-in-file.html)
 
-	:s（substitute）命令用来查找和替换字符串。语法如下：
+```shell
+:s（substitute）命令用来查找和替换字符串。语法如下：
 
-	:{作用范围}s/{目标}/{替换}/{替换标志}
+:{作用范围}s/{目标}/{替换}/{替换标志}
 	
-	例如:%s/foo/bar/g会在全局范围(%)查找foo并替换为bar，所有出现都会被替换（g）。
+例如:%s/foo/bar/g会在全局范围(%)查找foo并替换为bar，所有出现都会被替换（g）。
 
-	作用范围
-	作用范围分为当前行、全文、选区等等。
+作用范围
+作用范围分为当前行、全文、选区等等。
 
-	当前行：
-	:s/foo/bar/g
+当前行：
+:s/foo/bar/g
 	
-	全文：
-	:%s/foo/bar/g
+全文：
+:%s/foo/bar/g
 	
-	选区，在Visual模式下选择区域后输入:，Vim即可自动补全为 :'<,'>。
-	:'<,'>s/foo/bar/g
+选区，在Visual模式下选择区域后输入:，Vim即可自动补全为 :'<,'>。
+:'<,'>s/foo/bar/g
 	
-	2-11行：
-	:2,11s/foo/bar/g
+2-11行：
+:2,11s/foo/bar/g
 	
-	当前行.与接下来两行+2：
-	:.,+2s/foo/bar/g
-
+当前行.与接下来两行+2：
+:.,+2s/foo/bar/g
+```
 ## 行尾行头
 
 ```
 0: 行头
 $: 行尾	
 ```
+
+## 显示行数
+
+```shell
+# 临时开启/关闭
+:set nu!
+
+# 永久开启
+在~/.vimrc最后添加
+set nu!
+```
+
+## 复制/移动
+
+```shell
+# 复制: 复制9~15行到15行后
+:9,15 copy 15
+# 移动: 移动9~15行到15行后
+:9,15 move 15
+```
 	
 # 无日志后台执行
 
-```
+```shell
 nohup ./运行的程序 >/dev/null 2>&1 &	
 ```
 
 # 查找进程
 
-```
+```shell
 ps -aux | grep 关键字
 ```
 
 # 查找并杀掉进程
 
-```
+```shell
 ps -aux | grep 关键字 | awk '{print $2}' | xargs kill
 ```
 
