--- a/_posts/Mac/2020-02-20-question.md
+++ b/_posts/Mac/2020-02-20-question.md
@@ -64,3 +64,46 @@ BUILD_ID=donKillMe
 ```
 
 <https://blog.csdn.net/qq_41154871/article/details/89714457>
+
+# Mac安装Kies之后, 移除Kies, 扩展驱动未移除
+
+* 首先查看运行中的非官方驱动
+
+	```shell
+	kextstat | grep -v com.apple
+	```  
+	
+	![]({{site.assets_path}}/img/mac/kex_ext.png)
+	
+* 根据bundleid查找所在位置
+
+	```shell
+	# -b 代表bundleid
+	kextfind -s -b com.devguru
+	```	
+	
+	![]({{site.assets_path}}/img/mac/kex_ext_loc.png)
+
+* unload已经加载的驱动
+
+	```shell
+	sudo kextunload -m com.devguru.driver.SamsungComposite -v 5
+	sudo kextunload -m com.devguru.driver.SamsungMTP -v 5
+	sudo kextunload -m com.devguru.driver.SamsungACMControl -v 5
+	sudo kextunload -m com.devguru.driver.SamsungACMData -v 5
+	sudo kextunload -b /System/Library/Extentions/ssuddrv.kext -v 5
+	sudo kextunload -b /Library/Extentions/ssuddrv.kext -v 5
+	```
+	
+* 移除ssuddrv.kext驱动
+
+	```shell
+	sudo rm -rf /Library/Extentions/ssuddrv.kext
+	```
+	
+* 重新查看运行中的非官方驱动
+
+	```shell
+	kextstat | grep -v com.apple
+	```  
+	
