--- a/_posts/Mac/2020-02-20-question.md
+++ b/_posts/Mac/2020-02-20-question.md
@@ -67,6 +67,8 @@ BUILD_ID=donKillMe
 
 # Mac安装Kies之后, 移除Kies, 扩展驱动未移除
 
+## 移除步骤
+
 * 首先查看运行中的非官方驱动
 
 	```shell
@@ -106,4 +108,7 @@ BUILD_ID=donKillMe
 	```shell
 	kextstat | grep -v com.apple
 	```  
-	
+
+## 其他
+* 资料地址: <https://medium.com/@farazfazli/how-i-reverse-engineered-keis-and-sidesync-and-fixed-mtp-8949acbb1c29>
+* 便捷脚本, [点击下载]({{site.assets_path}}/file/unload.sh)
