--- a/_posts/Server/2020-03-14-geetestl.md
+++ b/_posts/Server/2020-03-14-geetestl.md
@@ -13,10 +13,9 @@ abstract: ""
 ---
 
 # 起因
-买的VPN, 还算不错, 但是特权流量要么买, 要么签到送, 像我这样的, 眼馋这个每日签到的特权流量(我不会说是因为这个签到积分到200可以换 __C榴邀请码__ 的), 又比较懒, 不太愿意每天去点, 早就想做个自动签到的, 跟那个我的开源爬虫项目[小客车阶梯摇号公告]
-(https://github.com/zhusonger/HzCarRock)差不多, 奈何这货的签到还用的GeeTest的滑动验证码, 这就比较蛋疼了, 不是点点就行的
+买的VPN, 还算不错, 但是特权流量要么买, 要么签到送, 像我这样的, 眼馋这个每日签到的特权流量(我不会说是因为这个签到积分到200可以换 __C榴邀请码__ 的), 又比较懒, 不太愿意每天去点, 早就想做个自动签到的, 跟那个我的开源爬虫项目 [小客车阶梯摇号公告](https://github.com/zhusonger/HzCarRock) 差不多, 奈何这货的签到还用的GeeTest的滑动验证码, 这就比较蛋疼了, 不是点点就行的
 
-所以只能按照之前同步Github的方式去做, 通过selenium结合新的图片库Pillow来实现破解滑动验证码了
+所以只能按照之前[同步Github到国内服务器](/sync-github-gitee-pages/)的方式去做, 通过selenium结合新的图片库Pillow来实现破解滑动验证码了
 
 顺便一提, 如果有需要的, 可以自己去注册一下, 现在只能通过邀请注册
 
