--- a/_posts/Mac/2020-02-13-terminal.md
+++ b/_posts/Mac/2020-02-13-terminal.md
@@ -22,10 +22,20 @@ Ctrl+u: 删除光标至命令行首的内容
 Ctrl+k: 删除光标至命令行尾的内容
 ```
 
-# 解压ZIP文件
+# ZIP命令
+解压
+
 ```
 unzip xxx.zip
 unzip xxx.zip -d 文件夹名称
+```
+
+压缩
+
+-e 添加密码
+
+```
+zip -er xxx.zip xxx.txt
 ```
 
 # Vim快捷操作
