--- a/_posts/2020-02-19-TODO.md
+++ b/_posts/2020-02-19-TODO.md
@@ -16,8 +16,8 @@ abstract: ""
 	> 在_config.yml配置url, 在网页内不使用该属性即可
 
 ## Android
-1. 完成Android分类下的几篇文章
-2. Android目录下创建自定义控件系列, 添加自定义控件实现过程与开源库
+1. 完成Android分类下的几篇文章(☑️)
+2. Android目录下创建自定义控件系列, 添加自定义控件实现过程与开源库(☑️)
 3. 补充Android音频/视频相关的知识总结与开源项目
 4. 完成Android基础的重温
 
