--- a/_posts/Java/2020-03-19-jmm.md
+++ b/_posts/Java/2020-03-19-jmm.md
@@ -1,11 +1,11 @@
 ---
-title: 00:Java内存模型(JMM) & JVM内存结构
+title: 00:内存模型(JMM) & JVM内存结构
 author: Zhusong
 layout: post
 footer: true
 category: Java
 date: 2020-3-19
-excerpt: "00:Java内存模型(JMM) & JVM内存结构"
+excerpt: "00:内存模型(JMM) & JVM内存结构"
 abstract: ""
 ---
 
