--- a/_posts/2020-02-19-TODO.md
+++ b/_posts/2020-02-19-TODO.md
@@ -25,5 +25,12 @@ abstract: ""
 1. 完成IDA分析so动态库，并破解so的签名验证
 
 ## Java
-1. 添加Java分类,实现Java基础的重温
+1. 添加Java分类,实现Java基础的重温(☑️)
 2. 重温Java同时重温基础算法与数据结构
+
+# 书单
+《深入理解java虚拟机》(☑️)  
+《Android系统源代码情景分析》  
+《Android开发艺术探索》  
+《剑指Offer》  
+《Java 高效编程(Effective Java)》
