--- a/_posts/Mac/2020-02-13-terminal.md
+++ b/_posts/Mac/2020-02-13-terminal.md
@@ -95,6 +95,13 @@ set nu!
 # 移动: 移动9~15行到15行后
 :9,15 move 15
 ```
+
+## 跳转指定行
+
+```shell
+# 命令行模式
+:n
+```
 	
 # 无日志后台执行
 
@@ -122,4 +129,10 @@ ps -aux | grep 关键字 | awk '{print $2}' | xargs kill
 alias proxy='export all_proxy=socks5://127.0.0.1:1080'
 alias unproxy='unset all_proxy'
 alias ipinfo='curl myip.ipip.net'
+```
+
+# 超链接
+
+```shell
+ln -s 源文件 目标文件
 ```
