--- a/_posts/Mac/2020-02-20-question.md
+++ b/_posts/Mac/2020-02-20-question.md
@@ -14,44 +14,51 @@ abstract: ""
 ---
 
 
-# Jenkins找不到命令
+# 一: Jenkins
+## 1. Jenkins找不到命令
 
 ## Q:
- * 找不到jekyll命令  
+找不到jekyll命令  
 
 ## A: 
-
-> 因为jenkins默认是执行xe模式的shell, 可以看到log
-> /bin/sh -xe /tmp/jenkins3955461468475838979.sh  
-> 
-```
+因为jenkins默认是执行xe模式的shell, 可以看到log
+/bin/sh -xe /tmp/jenkins3955461468475838979.sh  
+ 
+```shell
 #!/bin/bash -ilex
 ```
+
 > 注意使用bash而不是sh
+
+### 链接
 <https://blog.csdn.net/zzusimon/article/details/57080337>
 
 
-# Jenkins执行Shell失败并停止
+## 2. Jenkins执行Shell失败并停止
 
 ## Q:
 Jenkins执行Shell命令标记为Failure, 命令行执行到某一行就停止
-## A:
-> Jenkins正在使用/bin/sh -xe默认情况下。-x意思是打印执行的每个命令。-e如果脚本中的任何命令失败，则意味着退出失败。
-> 
 
- ```
-停止进一步执行命令失败：
+## A:
+Jenkins正在使用/bin/sh -xe默认情况下。-x意思是打印执行的每个命令。-e如果脚本中的任何命令失败，则意味着退出失败。
+
+
+```shell
+# 停止进一步执行命令失败：
 
 command || exit 0
 	
 若要在下列情况下继续执行命令失败：
 	
 command || true
- ```
-<https://blog.csdn.net/qq_32706349/article/details/87926715>
-<https://cloud.tencent.com/developer/ask/115620>
+```
 
-# Jenins 执行完Shell之后杀掉衍生进程
+链接 
+
+<https://blog.csdn.net/qq_32706349/article/details/87926715>  
+<https://cloud.tencent.com/developer/ask/115620>  
+
+## 3.Jenins 执行完Shell之后杀掉衍生进程
 
 ## Q:
 Jenkins在执行完shll之后会杀死衍生进程
@@ -63,52 +70,108 @@ Jenkins在执行完shll之后会杀死衍生进程
 BUILD_ID=donKillMe
 ```
 
+## 链接  
 <https://blog.csdn.net/qq_41154871/article/details/89714457>
 
-# Mac安装Kies之后, 移除Kies, 扩展驱动未移除
+# 二: Mac系统问题
+## 1. Mac安装Kies之后, 移除Kies, 扩展驱动未移除
 
-## 移除步骤
+### 移除步骤
 
 * 首先查看运行中的非官方驱动
 
-	```shell
-	kextstat | grep -v com.apple
-	```  
+```shell
+kextstat | grep -v com.apple
+```  
 	
-	![]({{site.assets_path}}/img/mac/kex_ext.png)
+![]({{site.assets_path}}/img/mac/kex_ext.png)
 	
 * 根据bundleid查找所在位置
 
-	```shell
-	# -b 代表bundleid
-	kextfind -s -b com.devguru
-	```	
+```shell
+# -b 代表bundleid
+kextfind -s -b com.devguru
+```	
 	
-	![]({{site.assets_path}}/img/mac/kex_ext_loc.png)
+![]({{site.assets_path}}/img/mac/kex_ext_loc.png)
+
 
 * unload已经加载的驱动
 
-	```shell
-	sudo kextunload -m com.devguru.driver.SamsungComposite -v 5
-	sudo kextunload -m com.devguru.driver.SamsungMTP -v 5
-	sudo kextunload -m com.devguru.driver.SamsungACMControl -v 5
-	sudo kextunload -m com.devguru.driver.SamsungACMData -v 5
-	sudo kextunload -b /System/Library/Extentions/ssuddrv.kext -v 5
-	sudo kextunload -b /Library/Extentions/ssuddrv.kext -v 5
-	```
+```shell
+sudo kextunload -m com.devguru.driver.SamsungComposite -v 5
+sudo kextunload -m com.devguru.driver.SamsungMTP -v 5
+sudo kextunload -m com.devguru.driver.SamsungACMControl -v 5
+sudo kextunload -m com.devguru.driver.SamsungACMData -v 5
+sudo kextunload -b /System/Library/Extentions/ssuddrv.kext -v 5
+sudo kextunload -b /Library/Extentions/ssuddrv.kext -v 5
+```
 	
 * 移除ssuddrv.kext驱动
 
-	```shell
-	sudo rm -rf /Library/Extentions/ssuddrv.kext
-	```
+```shell
+sudo rm -rf /Library/Extentions/ssuddrv.kext
+```
 	
 * 重新查看运行中的非官方驱动
 
-	```shell
-	kextstat | grep -v com.apple
-	```  
+```shell
+kextstat | grep -v com.apple
+```  
 
-## 其他
+### 链接
 * 资料地址: <https://medium.com/@farazfazli/how-i-reverse-engineered-keis-and-sidesync-and-fixed-mtp-8949acbb1c29>
 * 便捷脚本, [点击下载]({{site.assets_path}}/file/unload.sh)
+
+
+# 三: Python问题
+
+## 1. yum-config-manager提示ModuleNotFoundError: No module named 'yum'
+
+导入的包的版本 与 调用导入的位置使用的python版本不一致
+
+yum-config-manager使用yum,  但是使用的python(系统超链的默认版本, 比如我是3.6)
+
+yum使用的版本是python2
+
+一般直接修改成python2, 因为系统很多脚本都是python2实现的, 你改成python3可能导致改后面一系列调用的地方
+
+```shell
+# 修改版本
+#!/usr/bin/python => #!/usr/bin/python2
+```
+
+## 链接
+<https://zhuanlan.zhihu.com/p/20078630>
+
+
+# Centos系统
+
+## 1. 开机自动运行脚本
+
+修改/etc/rc.d/rc.local
+
+添加脚本
+
+{username} 指定运行的用户
+
+```shell
+su {username} -c "/home/{username}/Dev/Jekyll/reload.sh"
+```
+
+## 2. Jekyll 命令在开机启动时报错
+
+指定jekyll的全路径, 把bin改成wrapper
+
+```shell
+# 获取jekyll路径
+which jekyll
+# ~/.rvm/gems/ruby-2.6.3/bin/jekyll
+
+# 使用
+~/.rvm/gems/ruby-2.6.3/wrappers/jekyll
+```
+
+<https://hant-kb.kutu66.com/ruby/post_1073623>
+
+
