--- a/_posts/Mac/2020-02-13-terminal.md
+++ b/_posts/Mac/2020-02-13-terminal.md
@@ -14,7 +14,7 @@ abstract: ""
 ---
 
 
-# 终端光标跳转
+# 1. 终端光标跳转
 ```shell
 Ctrl+a: 跳到命令行首
 Ctrl+e: 跳到命令行尾
@@ -22,7 +22,7 @@ Ctrl+u: 删除光标至命令行首的内容
 Ctrl+k: 删除光标至命令行尾的内容
 ```
 
-# ZIP命令
+# 2. ZIP命令
 解压
 
 ```
@@ -38,7 +38,7 @@ unzip xxx.zip -d 文件夹名称
 zip -er xxx.zip xxx.txt
 ```
 
-# Vim快捷操作
+# 3. Vim快捷操作
 
 所有操作前提都是ESC进入命令行模式
 
@@ -103,26 +103,26 @@ set nu!
 :n
 ```
 	
-# 无日志后台执行
+# 4. 无日志后台执行
 
 ```shell
 nohup ./运行的程序 >/dev/null 2>&1 &	
 ```
 
-# 查找进程
+# 5. 查找进程
 
 ```shell
 ps -aux | grep 关键字
 ```
 
-# 查找并杀掉进程
+# 6. 查找并杀掉进程
 
 ```shell
 ps -aux | grep 关键字 | awk '{print $2}' | xargs kill
 ```
 
 
-# 终端代理
+# 7. 终端代理
 在不开启代理的情况下, 使用Shadowsocks在终端仍然是无法访问外网的,需要设置代理
 
 ```shell
@@ -131,8 +131,39 @@ alias unproxy='unset all_proxy'
 alias ipinfo='curl myip.ipip.net'
 ```
 
-# 超链接
+# 8. 超链接
 
 ```shell
 ln -s 源文件 目标文件
+```
+
+# 9. git clone大文件断点续传
+
+分支名: 一般为 master
+
+remote-url: 远程git地址
+
+```shell
+git clone --depth=1 --single-branch --branch 分支名 remote-url
+```
+
+# 10. wget
+
+```
+# 断点续传
+wget -c url
+
+# 后台下载
+wget -b url
+
+# 查看后台下载进度
+cat wget-log
+# 实时查看后台进度
+tail -f wget-log
+
+# 关闭
+ps -ef | grep wget
+kill {pid}
+# 直接使用pkill
+pkill wget
 ```
