--- a/_posts/Mac/2020-02-20-question.md
+++ b/_posts/Mac/2020-02-20-question.md
@@ -119,10 +119,25 @@ sudo rm -rf /Library/Extentions/ssuddrv.kext
 kextstat | grep -v com.apple
 ```  
 
+## 2. 下载AOSP
+
+在现在AOSP总是没网速或者中间出错。
+
+通过wget断点续传来下载。
+
+```shell
+#!/bin/bash
+# 开启
+wget -b -c https://mirrors.tuna.tsinghua.edu.cn/aosp-monthly/aosp-latest.tar
+
+# 关闭
+pkill wget
+rm wget-log.*
+```
+
 ### 链接
 * 资料地址: <https://medium.com/@farazfazli/how-i-reverse-engineered-keis-and-sidesync-and-fixed-mtp-8949acbb1c29>
 * 便捷脚本, [点击下载]({{site.assets_path}}/file/unload.sh)
-
 
 # 三: Python问题
 
@@ -175,3 +190,18 @@ which jekyll
 <https://hant-kb.kutu66.com/ruby/post_1073623>
 
 
+# 四: Sublime
+
+## 1. ctags
+
+### 提示 illegal option -- R
+
+MacOs没有安装ctags执行程序
+
+```shell
+brew install ctags
+```
+
+### can't find any relevent tags file
+
+没有生成tags文件, 文件夹右侧Ctags:Rebuild Tags
