--- a/_posts/Mac/2020-02-20-question.md
+++ b/_posts/Mac/2020-02-20-question.md
@@ -103,14 +103,14 @@ sudo kextunload -m com.devguru.driver.SamsungComposite -v 5
 sudo kextunload -m com.devguru.driver.SamsungMTP -v 5
 sudo kextunload -m com.devguru.driver.SamsungACMControl -v 5
 sudo kextunload -m com.devguru.driver.SamsungACMData -v 5
-sudo kextunload -b /System/Library/Extentions/ssuddrv.kext -v 5
-sudo kextunload -b /Library/Extentions/ssuddrv.kext -v 5
+sudo kextunload -b /System/Library/Extensions/ssuddrv.kext -v 5
+sudo kextunload -b /Library/Extensions/ssuddrv.kext -v 5
 ```
 	
 * 移除ssuddrv.kext驱动
 
 ```shell
-sudo rm -rf /Library/Extentions/ssuddrv.kext
+sudo rm -rf /Library/Extensions/ssuddrv.kext
 ```
 	
 * 重新查看运行中的非官方驱动
@@ -118,6 +118,10 @@ sudo rm -rf /Library/Extentions/ssuddrv.kext
 ```shell
 kextstat | grep -v com.apple
 ```  
+
+删除网络里的连接
+
+<http://ddrv.cn/a/333679>
 
 ## 2. 下载AOSP
 
