--- a/_posts/Mac/2020-03-03-tools.md
+++ b/_posts/Mac/2020-03-03-tools.md
@@ -72,3 +72,18 @@ macOS（或 Linux）缺失的软件包的管理器
 文本编辑与开发工具
 
 * [Install Package速度慢](https://blog.csdn.net/qq_39633494/article/details/93330323?depth_1-utm_source=distribute.pc_relevant.none-task&utm_source=distribute.pc_relevant.none-task)
+
+#[CocoaPods](https://cocoapods.org/)
+
+Xcode项目依赖管理
+
+* 安装
+
+```
+sudo gem install cocoapods
+```
+* 在Xcode项目目录下执行install
+
+```
+pod install
+```
