unity 修改备案号

--- a/_posts/Mac/2020-03-03-tools.md
+++ b/_posts/Mac/2020-03-03-tools.md
@@ -73,7 +73,7 @@ macOS（或 Linux）缺失的软件包的管理器
 
 * [Install Package速度慢](https://blog.csdn.net/qq_39633494/article/details/93330323?depth_1-utm_source=distribute.pc_relevant.none-task&utm_source=distribute.pc_relevant.none-task)
 
-#[CocoaPods](https://cocoapods.org/)
+# [CocoaPods](https://cocoapods.org/)
 
 Xcode项目依赖管理
 
@@ -82,8 +82,15 @@ Xcode项目依赖管理
 ```
 sudo gem install cocoapods
 ```
-* 在Xcode项目目录下执行install
-
+* 在Xcode项目目录下执行install  
+  这一步有点慢   
+  
 ```
 pod install
 ```
+
+# [Go2Shell](https://zipzapmac.com/Go2Shell)
+
+* 到工具栏右键点击【自定义工具栏】
+* 运行Go2Shell, 点击【Add XXXX】
+* 到工具栏右键点击【自定义工具栏】, 把刚才那个丑丑的图标移除
