--- a/_posts/Unity/2020-07-21-Unity.md
+++ b/_posts/Unity/2020-07-21-Unity.md
@@ -14,6 +14,8 @@ abstract: ""
 
 ## 导出Xcode项目自动配置PostProcessBuild
 
+> 配置的属性name打开project.pbxproj可以查看
+
 * 读取路径
 
 	```c#
@@ -45,7 +47,7 @@ abstract: ""
 	```
 * Build Phases设置头文件public
 
-	```
+	```c#
 	// 设置XXX.h为public访问, 供外部访问
 	string guid = pbxProject.FindFileGuidByProjectPath("Libraries/Plugins/iOS/XXX.h");
 	// 一般target为UnityFrameWork的
