unity 调用c++代码说明

--- a/_posts/Unity/2020-07-21-Unity.md
+++ b/_posts/Unity/2020-07-21-Unity.md
@@ -10,9 +10,7 @@ excerpt: "Unity"
 abstract: ""
 ---
 
-# iOS
-
-## 导出Xcode项目自动配置PostProcessBuild
+# 1.导出Xcode项目自动配置
 
 > 配置的属性name打开project.pbxproj可以查看
 
@@ -59,3 +57,94 @@ abstract: ""
 	```c#
 	proj.WriteToFile(projectPath);
 	```	
+
+# 2. C#调用C/C++代码
+有些项目需要希望直接调用现有SDK的C/C++方法, 比如Android (.so)和iOS (.a), 就可以通过C#提供的DllImport进行注册, C#就像调用一个系统提供的原生方法一样。
+
+* 实现C/C++代码
+
+```c
+
+// 头文件hp_mobile_common.h
+
+#ifndef hp_mobile_common_h
+#define hp_mobile_common_h
+
+#    ifdef __cplusplus
+#        ifdef _HP_SDK_EXPORTS_
+#            define HP_SDK_API extern "C" __attribute__((visibility ("default")))
+#        else
+#            define HP_SDK_API extern "C"
+#        endif
+#    else
+#        ifdef _HP_SDK_EXPORTS_
+#            define HP_SDK_API __attribute__((visibility ("default")))
+#        else
+#            define HP_SDK_API
+#        endif
+#    endif
+
+HP_SDK_API
+const char* hp_get_version();
+
+#endif /* hp_mobile_common_h */
+
+// 实现类hp_mobile_common.cpp
+
+#include "hp_mobile_common.h"
+
+const char* hp_get_version() {
+    return 0;
+}
+```
+
+* 通过CMake打包Android(.so)和iOS(.a)
+> TODO
+
+* C#导入方法
+> LIBRARY\_NAME是根据平台不同, iOS固定是"__Internal", Android是动态库的名字(去掉lib前缀和.so后缀, 跟Android里调用一样)。
+
+```c#
+
+// 工具类 HPMobile.cs
+
+using System;
+using System.Runtime.InteropServices;
+
+public class HPMobile
+{
+#if UNITY_IOS
+    private const string LIBRARY_NAME = "__Internal";
+#elif UNITY_ANDROID
+	private const string LIBRARY_NAME = "hp_mobile";
+#endif
+
+    [DllImport(LIBRARY_NAME)]
+    public static extern IntPtr hp_get_version();
+}
+
+
+// 测试脚本 CallNativeCode.cs
+using UnityEngine;
+using System.Runtime.InteropServices;
+using System;
+
+public class CallNativeCode : MonoBehaviour {
+
+	void OnGUI ()
+	{
+		IntPtr version = HPMobile. hp_get_version();
+		string versionS = Marshal.PtrToStringAnsi(version);
+		GUI.Label (new Rect (15, 125, 450, 100), "get_version = " + versionS);
+	}
+}
+
+```
+	
+* 目录结构
+	
+	![]({{site.assets_path}}/img/unity/stmobile.png)
+
+* 动态库(.so)和静态库(.a)的Inspector配置
+
+	![]({{site.assets_path}}/img/unity/stmobile_inspector.png)
