--- a/_posts/Mac/2020-03-03-tools.md
+++ b/_posts/Mac/2020-03-03-tools.md
@@ -39,7 +39,7 @@ macOS（或 Linux）缺失的软件包的管理器
 	./install.sh
 	```  
 * 关闭终端,重新打开
-* 安装软件brew intall autojump
+* 安装软件brew install autojump
 
 # [autojump](https://github.com/wting/autojump)
 
@@ -49,7 +49,7 @@ macOS（或 Linux）缺失的软件包的管理器
 
 * 打开git地址，git clone项目
 * 切换到autojump文件夹，运行./install.py
-* 结束后会提醒你加入命令到配置.profile, 这个是系统的, 当前用户是.bash_profile
+* 结束后会提醒你加入命令到配置.profile, 这个是系统的, 当前用户是.bash_profile, 10.15之后是放在.zshrc
 * 使用brew安装autojump  
 
 	```shell
@@ -79,13 +79,13 @@ Xcode项目依赖管理
 
 * 安装
 
-```
+```shell
 sudo gem install cocoapods
 ```
 * 在Xcode项目目录下执行install  
   这一步有点慢   
   
-```
+```shell
 pod install
 ```
 
@@ -94,3 +94,9 @@ pod install
 * 到工具栏右键点击【自定义工具栏】
 * 运行Go2Shell, 点击【Add XXXX】
 * 到工具栏右键点击【自定义工具栏】, 把刚才那个丑丑的图标移除
+
+# [OpenInTerminal](https://github.com/Ji4n1ng/OpenInTerminal)
+
+```shell
+brew cask install openinterminal
+```
