--- a/_posts/Mac/2020-03-03-tools.md
+++ b/_posts/Mac/2020-03-03-tools.md
@@ -73,6 +73,12 @@ macOS（或 Linux）缺失的软件包的管理器
 
 * [Install Package速度慢](https://blog.csdn.net/qq_39633494/article/details/93330323?depth_1-utm_source=distribute.pc_relevant.none-task&utm_source=distribute.pc_relevant.none-task)
 
+* 终端快捷命令
+
+```shell
+ln -s "/Applications/Sublime Text.app/Contents/SharedSupport/bin/subl" /usr/local/bin/subl
+```
+
 # [CocoaPods](https://cocoapods.org/)
 
 Xcode项目依赖管理
