--- a/_posts/Server/2020-03-03-jekyll.md
+++ b/_posts/Server/2020-03-03-jekyll.md
@@ -12,6 +12,11 @@ excerpt: "05:Jekyll安装本地调试"
 abstract: "便于论坛页面的本地调整"
 ---
 
+# [JEKYLL](https://jekyllrb.com/docs/installation/macos/)
+
+Jekyll 是一个静态网站生成器。用你喜欢的 标记语言书写内容并交给 Jekyll 处理，它将利用模板为你创建一个静态网站。你可以 调整你想要的网址样式、在网站上显示哪些数据 等等。
+
+
 # 安装rvm
 RVM 是 Ruby 的版本管理器
 
@@ -21,11 +26,17 @@ RVM 是 Ruby 的版本管理器
 	>
 	> 出现curl: (35) LibreSSL SSL\_connect: SSL\_ERROR\_SYSCALL in connection to raw.githubusercontent.com:443  
 	>> 终端还是国内, 无法访问, 给终端设置代理, 参照[00:终端Terminal便捷操作](</terminal>)内的终端代理部分  
+
+	```shell
+	brew install ruby
+	# 配置环境
+	echo '\n#ruby\nexport PATH="/usr/local/opt/ruby/bin:$PATH"' >> ~/.bash_profile
+	```
 	
 2. 安装jekyll & bundler
 	
 	```shell
-	gem install jekyll bundler
+	sudo gem install jekyll bundler
 	jekyll -v # 查看jekyll版本
 	bundle -v # 查看bundle版本
 	```
