--- a/_posts/Server/2020-03-14-geetestl.md
+++ b/_posts/Server/2020-03-14-geetestl.md
@@ -19,7 +19,7 @@ abstract: ""
 
 顺便一提, 如果有需要的, 可以自己去注册一下, 现在只能通过邀请注册
 
-[邀请码:678446](https://www.dotunnel005.com/auth/reg2016)
+[邀请码:678446](https://www.dotunnel005.com/auth/register)
 
 # 思路
 
