--- a/_posts/Mac/2020-02-20-question.md
+++ b/_posts/Mac/2020-02-20-question.md
@@ -143,6 +143,28 @@ rm wget-log.*
 * 资料地址: <https://medium.com/@farazfazli/how-i-reverse-engineered-keis-and-sidesync-and-fixed-mtp-8949acbb1c29>
 * 便捷脚本, [点击下载]({{site.assets_path}}/file/unload.sh)
 
+
+## 3. git svn命令失效
+
+* 提示 __git: 'svn' is not a git-command.__
+
+```
+# make sure install git, svn, perl with brew
+brew install git
+brew install perl
+brew install subversion
+
+# edit /usr/local/Cellar/git/2.27.0/libexec/git-core/git-svn
+# replace #!/usr/bin/perl with #!/usr/local/bin/perl
+
+git svn works
+```
+
+### 链接
+
+<https://github.com/Homebrew/homebrew-core/issues/52490>
+
+
 # 三: Python问题
 
 ## 1. yum-config-manager提示ModuleNotFoundError: No module named 'yum'
@@ -164,7 +186,7 @@ yum使用的版本是python2
 <https://zhuanlan.zhihu.com/p/20078630>
 
 
-# Centos系统
+# 四: Centos系统
 
 ## 1. 开机自动运行脚本
 
@@ -194,7 +216,7 @@ which jekyll
 <https://hant-kb.kutu66.com/ruby/post_1073623>
 
 
-# 四: Sublime
+# 五: Sublime
 
 ## 1. ctags
 
