微信防撤回

--- a/_posts/Mac/2020-03-03-tools.md
+++ b/_posts/Mac/2020-03-03-tools.md
@@ -106,3 +106,7 @@ pod install
 ```shell
 brew cask install openinterminal
 ```
+
+# [WeChatExtension-ForMac](https://github.com/MustangYM/WeChatExtension-ForMac)
+
+微信防撤回
