--- a/_posts/Mac/2020-02-13-terminal.md
+++ b/_posts/Mac/2020-02-13-terminal.md
@@ -149,7 +149,7 @@ git clone --depth=1 --single-branch --branch 分支名 remote-url
 
 # 10. wget
 
-```
+```shell
 # 断点续传
 wget -c url
 
@@ -166,4 +166,10 @@ ps -ef | grep wget
 kill {pid}
 # 直接使用pkill
 pkill wget
+```
+
+# 11. 查看Cenots系统版本
+
+```shell
+cat /etc/redhat-release
 ```
