更新解答 & 修复本地 jekyll 错误

--- a/_posts/Server/2020-03-03-jekyll.md
+++ b/_posts/Server/2020-03-03-jekyll.md
@@ -37,6 +37,8 @@ RVM 是 Ruby 的版本管理器
 	
 	```shell
 	sudo gem install jekyll bundler
+	# macOS 10.14以上执行这一行代码
+	sudo gem install -n /usr/local/bin/ jekyll
 	jekyll -v # 查看jekyll版本
 	bundle -v # 查看bundle版本
 	```
