--- a/_posts/TensorFlow/2020-08-11-tf-basic.md
+++ b/_posts/TensorFlow/2020-08-11-tf-basic.md
@@ -233,6 +233,24 @@ sum_val(eval) =  13
 <details>
 <summary>展开</summary>
 {% highlight python %}
-# TODO
+
+import tensorflow as tf
+
+tf.compat.v1.disable_v2_behavior()
+
+g = tf.Graph()
+with g.as_default():
+  x = tf.constant(8, name="x_const")
+  y = tf.constant(5, name="y_const")
+  sum = tf.add(x, y, name="x_y_sum")
+
+  z = tf.constant(4, name="z_const")
+  sum_z = tf.add(sum, z, name="x_y_z_sum")
+  
+
+  with tf.compat.v1.Session() as session:
+    print(sum.eval())
+    print(sum_z.eval())
+    
 {% endhighlight %}
 </details>
