--- a/_posts/Mac/2020-08-10-svn-git.md
+++ b/_posts/Mac/2020-08-10-svn-git.md
@@ -125,3 +125,25 @@ svn log -l 3
 	
 ## 链接
 <https://blog.csdn.net/qq446282412/article/details/76220621>
+
+
+# Git命令备忘
+
+## Git标签
+
+1.  打标签
+
+	```shell
+	git tag 标签名
+	
+	git tag 标签名 -m "Release Note"
+	```
+
+2. 移除标签
+
+	```shell
+	# 移除本地标签
+	git tag -d 标签名
+	# 移除远程标签
+	git push origin :refs/tags/标签名
+	```
