--- a/_posts/Mac/2020-08-10-svn-git.md
+++ b/_posts/Mac/2020-08-10-svn-git.md
@@ -147,3 +147,11 @@ svn log -l 3
 	# 移除远程标签
 	git push origin :refs/tags/标签名
 	```
+	
+3. 不同开始的git库pull  
+	
+	常见的就是github上创建了一个repo, 但是本地也创建了一个repo, 本地需要先git pull, 此时会报 __git pull 碰到拒绝合并无关历史__ 错误。  
+	
+	```shell
+	git pull origin master --allow-unrelated-histories 
+	```
