--- a/_posts/Mac/2020-02-13-terminal.md
+++ b/_posts/Mac/2020-02-13-terminal.md
@@ -42,6 +42,23 @@ zip -er xxx.zip xxx.txt
 
 所有操作前提都是ESC进入命令行模式
 
+## 修改vim默认配置
+```shell
+# 没有会自动创建
+vim ~/.vimrc
+# 配置
+# 设置显示行号
+set nu!
+# 在Vim中还可以进行自动缩进，主要有cindent、smartindent和autoindent三种。
+# 启动smartindent
+set smartindent
+# 缩进将被转化为4个空格
+set tabstop=4
+set softtabstop=4
+set shiftwidth=4
+set expandtab
+```
+
 ## [查找与替换](https://harttle.land/2016/08/08/vim-search-in-file.html)
 
 ```shell
@@ -104,6 +121,22 @@ set nu!
 # 命令行模式
 :n
 ```
+
+## 撤回
+
+```shell
+# 正常模式
+按u撤回修改
+```
+
+## 修改缩进空格
+
+```shell
+:set tabstop=4
+:set softtabstop=4
+:set shiftwidth=4
+:set expandtab
+```
 	
 # 4. 无日志后台执行
 
@@ -123,6 +156,27 @@ ps -aux | grep 关键字
 ps -aux | grep 关键字 | awk '{print $2}' | xargs kill
 ```
 
+一步步自己查找进程然后kill, 还是略显麻烦, 写了个脚本
+
+```shell
+#!/bin/bash
+if [ -n "$1" ];then
+    echo "kill process : $1"
+    PID="$(ps -ef | grep $1 | head -n 1)"
+    echo $PID
+    PID="$(ps -ef | grep $1 | head -n 1 | awk '{print $2}')"
+    if [ -n $PID ];then
+        echo "kill cpid : $PID"
+    else
+        echo "no process"
+    fi  
+else
+    echo "process name is null"
+fi
+
+# 使用方式
+xxx.sh [process_name]
+```
 
 # 7. 终端代理
 在不开启代理的情况下, 使用Shadowsocks在终端仍然是无法访问外网的,需要设置代理
