更新centos补丁处理

--- a/_posts/Server/2020-11-03-centos7.md
+++ b/_posts/Server/2020-11-03-centos7.md
@@ -92,4 +92,45 @@ sudo firewall-cmd --zone=public --add-port=xxx/[tcp/udp] --permanent
 sudo firewall-cmd --reload
 sudo systemctl restart firewalld.service 
 ```
- 
+
+# yum
+
+## 定期更新补丁
+
+```shell
+#!/bin/sh
+echo "start hotfix"
+sudo yum update -y
+sudo yum update kernel -y
+sudo yum update nscd -y
+sudo yum update libgudev1 -y
+sudo yum update authconfig -y
+sudo yum update microcode_ctl -y
+```
+
+## 版本依赖错误
+
+```shell
+错误：软件包：php-5.4.16-46.1.el7_7.x86_64 (@updates)
+          需要：php-cli(x86-64) = 5.4.16-46.1.el7_7
+          正在删除: php-cli-5.4.16-46.1.el7_7.x86_64 (@updates)
+              php-cli(x86-64) = 5.4.16-46.1.el7_7
+          更新，由: php-cli-5.4.16-48.el7.x86_64 (os)
+              php-cli(x86-64) = 5.4.16-48.el7
+错误：软件包：php-5.4.16-46.1.el7_7.x86_64 (@updates)
+          需要：php-common(x86-64) = 5.4.16-46.1.el7_7
+          正在删除: php-common-5.4.16-46.1.el7_7.x86_64 (@updates)
+              php-common(x86-64) = 5.4.16-46.1.el7_7
+          更新，由: php-common-5.4.16-48.el7.x86_64 (os)
+              php-common(x86-64) = 5.4.16-48.el7
+错误：软件包：httpd-2.4.6-90.el7.centos.x86_64 (@base)
+          需要：httpd-tools = 2.4.6-90.el7.centos
+          正在删除: httpd-tools-2.4.6-90.el7.centos.x86_64 (@base)
+              httpd-tools = 2.4.6-90.el7.centos
+          更新，由: httpd-tools-2.4.6-93.el7.centos.x86_64 (os)
+              httpd-tools = 2.4.6-93.el7.centos
+              
+# 直接删除这个软件包
+sudo yum remove php-5.4.16-46.1.el7_7.x86_64
+sudo yum remove httpd-2.4.6-90.el7.centos.x86_64
+``` 
