--- a/_posts/Mac/2020-08-10-svn-git.md
+++ b/_posts/Mac/2020-08-10-svn-git.md
@@ -155,3 +155,9 @@ svn log -l 3
 	```shell
 	git pull origin master --allow-unrelated-histories 
 	```
+
+4. 推送当前仓库到新的远程仓库
+
+	```shell
+	git push --mirror 远程url
+	```
