--- a/_posts/Mac/2020-08-10-svn-git.md
+++ b/_posts/Mac/2020-08-10-svn-git.md
@@ -146,6 +146,8 @@ svn log -l 3
 	git tag -d 标签名
 	# 移除远程标签
 	git push origin :refs/tags/标签名
+	# 删除所有标签  
+	git tag -l | xargs -n 1 git push --delete origin
 	```
 	
 3. 不同开始的git库pull  
