--- a/_posts/Mac/2020-03-03-tools.md
+++ b/_posts/Mac/2020-03-03-tools.md
@@ -107,6 +107,11 @@ pod install
 brew cask install openinterminal
 ```
 
-# [WeChatExtension-ForMac](https://github.com/MustangYM/WeChatExtension-ForMac)
+# [WeChatTweak-macOS](https://github.com/Sunnyyoung/WeChatTweak-macOS)
 
 微信防撤回
+
+# [图压](https://tuya.xinxiao.tech/)
+
+国内的一款免费好用的压图软件, 支持macOS、Windows系统
+
